# PoolPredictor

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/iwex/poolpredictor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/bridge/: NativeBridge.cpp  NativeBridge.h  NativeBridgeConstants.h
app/src/main/cpp/cheat/data/: GameConstants.h  GlobalSettings.cpp  GlobalSettings.h
app/src/main/cpp/cheat/data/table/: TableProperties.cpp  TableProperties.h
app/src/main/cpp/cheat/data/type/: Point2D.cpp  Point2D.h  Vector3D.cpp  Vector3D.h
app/src/main/cpp/cheat/memory/: MemoryManager.cpp  MemoryManager.h  Offsets.h
app/src/main/cpp/cheat/memory/inner/: Balls.cpp  CueProperties.cpp  CueStats.cpp  GameManager.cpp  MenuManager.cpp  UserSettings.cpp  VisualCue.cpp
app/src/main/cpp/cheat/predictor/: Prediction.cpp  Prediction.h
app/src/main/cpp/mod/data/: GameConstants.h  GlobalSettings.h
app/src/main/cpp/mod/data/table/: TableProperties.cpp  TableProperties.h
app/src/main/cpp/mod/data/type/: Point2D.cpp  Point2D.h  ScreenPoint.h  Vector3D.h
app/src/main/cpp/mod/memory/: MemoryManager.cpp  MemoryManager.h  Offsets.h
app/src/main/cpp/mod/memory/inner/: Balls.cpp  GameManager.cpp  MenuManager.cpp  UserSettings.cpp  VisualCue.cpp
app/src/main/cpp/mod/predictor/: Prediction.cpp  Prediction.h
app/src/main/cpp/utils/: NumberUtils.h  logger.h  stringObfuscator.h
app/src/main/java/com/iwex/poolpredictor/: MainActivity.kt
app/src/main/java/com/iwex/poolpredictor/app/: Launcher.kt  LauncherActivity.kt  NativeBridge.kt
app/src/main/java/com/iwex/poolpredictor/app/model/: AimTabState.kt  EspParameters.kt  EspTabState.kt  TablePosition.kt
app/src/main/java/com/iwex/poolpredictor/app/repository/: AimTabRepository.kt  ConfigRepository.kt  ConfigRepositoryImpl.kt  EspTabRepository.kt  RepositoryFactory.kt  TablePositionRepository.kt
app/src/main/java/com/iwex/poolpredictor/data/: NativeBridge.kt
app/src/main/java/com/iwex/poolpredictor/domain/: NativeBridge.kt
app/src/main/java/com/iwex/poolpredictor/presentation/: MenuWidgetFactory.kt
app/src/main/java/com/iwex/poolpredictor/util/: Utils.kt
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/test/java/com/iwex/poolpredictor/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+100 files in other folders)
